--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Artorp/cc-tweaked-type-definitions#readme",
   "devDependencies": {
-    "typescript": "^4.1.5"
+    "typescript": "^4.1.5",
+    "typescript-to-lua": "^0.38.0"
   }
 }
