--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "declarations/index.d.ts",
   "types": "declarations/index.d.ts",
   "scripts": {
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint .",
+    "typecheck": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
